LEXEVS-2402 Updated build scripts to include additional ANT_OPS and MAVEN_OPTS